--- a/apps/main/templates/main/detail.html
+++ b/apps/main/templates/main/detail.html
@@ -1,33 +1,25 @@
+{% extends "main/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hero Denim Experience</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Denim</a></li>
-          <li><a href="#">Prendas</a></li>
-          <li><a href="#">Niños</a></li>
-          <li>BUSCADOR</li>
-        </ul>
-      </nav>
-      <img src="" alt="Logo Hero Denim" />
-    </header>
-    <h2>Prendas</h2>
-      <p>Nombre de la prenda: {{ object.name }}</p>
-      <p>Descripción: {{ object.description }}</p>
-      <p>Marca: {{ object.brand }}</p>
-      {% if object.offert_price %}
-        <p>Precio de oferta: {{ object.offert_price }}</p>
-        <strike>Precio normal: {{ object.price }}</strike>
-      {% else %}
-        <p>Precio: {{ object.price }}</p>
-      {% endif %}
-      <p>Imagen: <img src="{% get_media_prefix %}{{ object.photo.large }}" alt="" /><p>
-      <p>Cantidad: {{ object.stock }}</p>
-  </body>
-</html>
+
+
+
+{% block title %}{{ cloth.name }}{% endblock %}
+
+
+
+{% block content %}
+<h2>{{ cloth.name }}</h2>
+<p>Descripción: {{ cloth.description }}</p>
+<p>Marca: {{ cloth.brand }}</p>
+{% if cloth.offer_price %}
+  <p>Precio de oferta: {{ cloth.offer_price }}</p>
+  <strike>Precio normal: {{ cloth.price }}</strike>
+{% else %}
+  <p>Precio: {{ cloth.price }}</p>
+{% endif %}
+{% for image in cloth.images.all %}
+<p>Imagen: <img src="{% get_media_prefix %}{{ image.img.large }}" alt="{{ image.img.name }}" /><p>
+{% endfor %}
+<p>Cantidad: {{ cloth.stock }}</p>
+<button onclick="window.history.back()">Atrás</button>
+{% endblock %}
