--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -7,49 +7,51 @@
 
 
 
-{% block content %}
-<section>
-  <div class="producto">
-    <h2>Prendas</h2>
-    {% for cloth in clothes %}
-      <div class="producto-texto text-center">
-        <p class="producto-nombre">{{ cloth.name }}</p>
-        <p>Descripción: {{ cloth.description }}</p>
-        <p>Marca: {{ cloth.brand }}</p>
-        {% if cloth.offer_price %}
-          <strike><p class="producto-precio">Precio normal: {{ cloth.price }}</p></strike>
-          <p class="producto-precio">Precio de oferta: {{ cloth.offet_price }}</p>
-        {% else %}
-          <p class="producto-precio">{{ cloth.price }}</p>
-        {% endif %}
-        <span class="typcn typcn-shopping-cart" style="font-size: 4em;"></span>
-      </div>
-      {% for image in cloth.images.all %}
-        <div class="producto-imagen">
-          <img src="{% get_media_prefix %}{{ image.img.large }}" alt="{{ image.img.name }}" />
-        </div>
-      {% endfor %}
-      <p>Cantidad: {{ cloth.stock }}</p>
-      <a href="{% url 'main:detail' cloth.slug %}">Ver detalle</a>
-    {% endfor %}
-  </div>
+{% block navbar %}
+{% include "main/partials/_navbar.html" with active_link="main:index" %}
+{% endblock navbar %}
 
-  {% if is_paginated %}
+
+
+{% block content %}
+<h2>Prendas</h2>
+{% for cloth in clothes %}
+    <p>{{ cloth.name }}</p>
+    <p>Descripción: {{ cloth.description }}</p>
+    <p>Marca: {{ cloth.brand }}</p>
+    {% if cloth.offer_price %}
+        <strike><p>Precio normal: {{ cloth.price }}</p></strike>
+        <p>Precio de oferta: {{ cloth.offet_price }}</p>
+    {% else %}
+        <p>{{ cloth.price }}</p>
+    {% endif %}
+        <span class="typcn typcn-shopping-cart" style="font-size: 4em;"></span>
+    {% for image in cloth.images.all %}
+        <img src="{% get_media_prefix %}{{ image.img.large }}" alt="{{ image.img.name }}" />
+    {% endfor %}
+    {% if cloth.stock > 0 %}
+        <p>Cantidad: {{ cloth.stock }}</p>
+    {% else %}
+        <p>Cantidad: Actualmente sin stock</p>
+    {% endif %}
+    <a href="{% url 'main:detail' cloth.slug %}">Ver detalle</a>
+{% endfor %}
+
+{% if is_paginated %}
     <ul>
-      {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-      {% endif %}
-      {% for page in page_obj.paginator.page_range %}
-        {% ifequal page_obj.number page  %}
-          <li><span>{{ page }}</span></li>
-        {% else %}
-          <li><span><a href="?page={{ page }}">{{ page }}</a></span></li>
-        {% endifequal %}
-      {% endfor %}
-      {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-      {% endif %}
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+        {% endif %}
+        {% for page in page_obj.paginator.page_range %}
+            {% ifequal page_obj.number page  %}
+                <li><span>{{ page }}</span></li>
+            {% else %}
+                <li><span><a href="?page={{ page }}">{{ page }}</a></span></li>
+            {% endifequal %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+        {% endif %}
     </ul>
-  {% endif %}
-</section>
-{% endblock %}
+{% endif %}
+{% endblock content %}
