--- a/clothes/templates/clothes/international.html
+++ b/clothes/templates/clothes/international.html
@@ -7,5 +7,5 @@
 
 
 {% block navbar %}
-{% include "main/partials/_navbar.html" with active_link="main:international" %}
+{% include 'clothes/partials/_navbar.html' with active_link='clothes:international' %}
 {% endblock navbar %}
