--- a/clothes/templates/clothes/national.html
+++ b/clothes/templates/clothes/national.html
@@ -7,5 +7,5 @@
 
 
 {% block navbar %}
-{% include "main/partials/_navbar.html" with active_link="main:national" %}
+{% include 'clothes/partials/_navbar.html' with active_link='clothes:national' %}
 {% endblock navbar %}
