--- a/clothes/templates/clothes/partials/_navbar.html
+++ b/clothes/templates/clothes/partials/_navbar.html
@@ -1,5 +1,5 @@
 <ul>
-    <li{% ifequal active_link 'main:index' %} class="active"{% endifequal %}><a href="{% url 'main:index' %}">Índice</a></li>
-    <li{% ifequal active_link 'main:national' %} class="active"{% endifequal %}><a href="{% url 'main:national' %}">Prendas Nacionales</a></li>
-    <li{% ifequal active_link 'main:international' %} class="active"{% endifequal %}><a href="{% url 'main:international' %}">Prendas Importadas</a></li>
+    <li{% ifequal active_link 'clothes:index' %} class="active"{% endifequal %}><a href="{% url 'clothes:index' %}">Índice</a></li>
+    <li{% ifequal active_link 'clothes:national' %} class="active"{% endifequal %}><a href="{% url 'clothes:national' %}">Prendas Nacionales</a></li>
+    <li{% ifequal active_link 'clothes:international' %} class="active"{% endifequal %}><a href="{% url 'clothes:international' %}">Prendas Importadas</a></li>
 </ul>
